# greedy_snake

./: CMakeLists.txt
inc/: test.hpp
src/: main.cpp  test.cpp
